--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -1,5 +1,7 @@
+@import "../../global.scss";
+
 .topbar {
-  background-color: chartreuse;
+  background-color: $mainColor;
   width: 100%;
   height: 70px;
   position: fixed;
